# dask-ngs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/dask_ngs/: __init__.py  _index.py  bench.ipynb
tests/: test_chunk_indexes.py  test_package.py  test_readers.py
tests/fixtures/: example.bam.bai
